[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://TileMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 3 )
Enemy = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 600.0
margin_bottom = 400.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 192, 104 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="EnemyStartPosition" type="Position2D" parent="."]
position = Vector2( 192, 248 )

[node name="EnemyStartPosition2" type="Position2D" parent="."]
position = Vector2( 304, 264 )

[node name="EnemyStartPosition3" type="Position2D" parent="."]
position = Vector2( 416, 232 )
[connection signal="action_completed" from="Player" to="." method="_on_Player_action_completed"]
[connection signal="damage_received" from="Player" to="." method="_on_Player_damage_received"]
